# nano-code

./: .env.example  .gitignore  AGENTS.md  CODE_REVIEW.md  ENHANCEMENT_SUMMARY.md  FINAL_STATUS.md  LICENSE  README.md  SUBMIT_GUIDE.md  coverage.xml  mypy.ini  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: CLAUDE_CODE_REFERENCE.md  CLI_REFACTOR_PLAN.md  TASK_BREAKDOWN.md  agentops-feature-design.md  agentops-system-design.md  five-agents-design.md  five-agents-quickstart.md
docs/prototype/: README.md
docs/prototype/py-server/: requirements.txt  server.py
docs/prototype/ts-cli/: package.json
docs/prototype/ts-cli/src/: app.tsx  index.tsx
docs/prototype/ts-cli/src/components/: ChatView.tsx  InputBox.tsx  Markdown.tsx  MessageItem.tsx  StatusBar.tsx  ToolExecution.tsx
docs/prototype/ts-cli/src/hooks/: useAgent.ts
docs/scripts/: check-status.sh  run-phase1.sh  run-phase2.sh  run-phase3.sh
docs/tasks/: TASK_1.1_MONOREPO.md  TASK_1.2_SERVER.md  TASK_1.3_CLIENT.md  TASK_2.1_UI_COMPONENTS.md  TASK_2.2_MARKDOWN.md  TASK_2.3_ANIMATION.md  TASK_2.4_HOOK.md  TASK_3.1_INTEGRATION.md
examples/: five_agents_demo.py  new_tools_demo.py  new_tools_demo_latest.py  plugin.yaml
scripts/: e2e_test.py
src/jojo_code/agent/: __init__.py  coding_agent.py  impact_analyzer.py  nodes.py  pipeline.py  prd_agent.py  spec_agent.py  sub.py  task_spec.py  tool.py  verification_agent.py
src/jojo_code/cli/: app.py  main.py  theme.py
src/jojo_code/cli/views/: input_box.py  status_bar.py
src/jojo_code/core/: __init__.py  error_code.py  exceptions.py  retry.py
src/jojo_code/mcp/: client.py
src/jojo_code/memory/: __init__.py  long_term.py  retriever.py  short_term.py  types.py
src/jojo_code/models/: __init__.py  authuser.py  factory.py  registry.py  test.py  types.py  user.py
src/jojo_code/ops/: __init__.py  collector.py  config.py  evaluator.py  exporter.py  models.py  report.py
src/jojo_code/plugin/: __init__.py  base.py  config.py  discovery.py  hooks.py  integration.py  loader.py  registry.py
src/jojo_code/plugins/: __init__.py  code_review.py  git_plugin.py  test_generator.py
src/jojo_code/security/: __init__.py  denial.py  enhanced.py  manager.py  modes.py  rule.py
src/jojo_code/server/: handlers.py  main.py  ws_server.py
src/jojo_code/services/: iauthservice.py  iuserservice.py
src/jojo_code/skills/: __init__.py  base.py  builtins.py  manager.py  types.py
src/jojo_code/task/: __init__.py  executor.py  id.py  types.py
src/jojo_code/tools/: __init__.py  data_tools.py  doc_tools.py  http_tools.py  registry.py  system_tools.py  web_fetch_tools.py
src/nano_code/: __init__.py  __main__.py
src/nano_code/agent/: graph.py  nodes.py  state.py
src/nano_code/cli/: args.py  completer.py  config_wizard.py  confirm.py  console.py  diff_preview.py  enhanced.py  main.py  session_manager.py  session_ui.py  theme.py
src/nano_code/context/: __init__.py  init.py  lazy_ignore.py  project.py
src/nano_code/core/: api_server.py  cache.py  config.py  database.py  exceptions.py  llm.py  monitoring.py  plugin.py  ratelimit.py  result.py  sync.py  validation.py  webhook.py
src/nano_code/memory/: conversation.py
src/nano_code/security/: command_guard.py  path_guard.py
src/nano_code/server/: __init__.py  protocol.py  rpc.py
src/nano_code/session/: __init__.py  manager.py  models.py
src/nano_code/tools/: __init__.py  code_analysis_tools.py  file_tools.py  git_tools.py  performance_tools.py  registry.py  search_tools.py  shell_tools.py  web_tools.py
tests/: conftest.py  test_agent.py  test_cli.py  test_core.py  test_exceptions.py  test_lazy_ignore.py  test_memory.py  test_result.py  test_server_protocol.py  test_tools.py
tests/cli/: test_completer.py  test_keybindings.py  test_session_manager.py  test_theme.py
tests/ops/: test_evaluator.py  test_ops.py  test_report.py
tests/test_agent/: test_coding_agent.py  test_graph.py  test_impact_analyzer.py  test_pipeline.py  test_prd_agent.py  test_spec_agent.py  test_verification_agent.py
tests/test_cli/: test_console.py  test_main.py
tests/test_core/: test_config.py  test_llm.py
tests/test_e2e/: test_agent_e2e.py  test_cases_e2e_jojo.json  test_cli.py  test_longcat.py  test_session.py  test_user_journey.py
tests/test_memory/: test_conversation.py
tests/test_plugin/: test_plugin.py
tests/test_security/: test_modes.py
tests/test_server/: test_jsonrpc_server.py
tests/test_session/: test_manager.py  test_models.py
tests/test_tools/: test_code_analysis_tools.py  test_file_tools.py  test_git_tools.py  test_performance_tools.py  test_search_tools.py  test_shell_tools.py  test_web_tools.py
tests/test_tui/: test_tui.py
wiki/: 01-项目结构.md  02-Agent架构.md  03-工具系统.md  04-LLM配置.md  05-记忆系统.md  06-开发指南.md  07-权限系统.md  08-代码审查记录.md  09-PR交互增强.md  DEV_PLAN.md  PR_DESCRIPTION.md  README.md  TASK_PLAN_MODE.md  TASK_PROJECT_CONTEXT.md  TASK_SESSION_RECOVERY.md  TASK_WEB_SEARCH.md  tool-permission-design.md
